# secunda

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pre-commit-config.yaml  pyproject.toml
api/: deps.py
api/v1/: activities.py  buildings.py  organizations.py
core/: config.py  db.py  pagination.py  security.py
models/: activity.py  associations.py  building.py  organization.py
repositories/: activity_repo.py  building_repo.py  const.py  organization_repo.py
schemas/: activity.py  building.py  organization.py
services/: activity_tree.py  geo.py
