[tool.poetry]
name = "orgs-api"
version = "0.1.0"
description = "Directory of Organizations, Buildings, Activities"
authors = ["You <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
testcontainers = "^3"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py", "_test.py"]
asyncio_mode = "auto"
filterwarnings = [
"ignore::DeprecationWarning:sqlalchemy.",
"ignore::DeprecationWarning:alembic.*",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"